--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
-  display: flex;
   justify-content: center;
-  margin-top: 5%;
+  /* margin-top: 5%; */
   
 
 }
@@ -10,5 +9,16 @@
 margin-top: 7%;
 height: 70% !important;
 width: 60% !important;
+}
 
+.Mapa{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  
+}
+
+.login{
+  display: flex;
+  justify-content: center;
 }
